[gd_scene load_steps=7 format=2]

[ext_resource path="res://ExerciceMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/DejaVuFont.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Main/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 200
custom_constants/margin_top = 0
custom_constants/margin_left = 200
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Control/MarginContainer"]
margin_left = 200.0
margin_right = 824.0
margin_bottom = 600.0
theme = ExtResource( 2 )
custom_constants/separation = 50
alignment = 1

[node name="MyGame" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 624.0
margin_bottom = 141.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Mes Jeux"
expand_icon = true

[node name="Count" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 624.0
margin_bottom = 275.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Compter"
expand_icon = true

[node name="WeekDays" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 624.0
margin_bottom = 409.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Jours Semaine"
expand_icon = true

[node name="Color" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 459.0
margin_right = 624.0
margin_bottom = 543.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Couleurs"
expand_icon = true

[node name="Back" type="Button" parent="Main/Control"]
margin_right = 100.0
margin_bottom = 100.0
theme = ExtResource( 2 )
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/MyGame" to="." method="_on_MyGame_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/Count" to="." method="_on_Count_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/WeekDays" to="." method="_on_WeekDays_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/Color" to="." method="_on_Color_pressed"]
[connection signal="pressed" from="Main/Control/Back" to="." method="_on_Back_pressed"]
